--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
 	},
 	"author": "Krittiya Clark",
 	"license": "ISC",
-	"devDependencies": {
-		"nodemon": "^2.0.12"
-	},
 	"dependencies": {
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
-		"mongodb": "^3.6.5"
+		"mongodb": "^3.6.5",
+		"mongoose": "^5.12.3",
+		"nodemon": "^2.0.12"
 	}
 }
