--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
 	"author": "Krittiya Clark",
 	"license": "ISC",
 	"dependencies": {
+		"connect-mongo": "^3.2.0",
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
+		"express-session": "^1.17.1",
 		"mongodb": "^3.6.5",
 		"mongoose": "^5.12.3",
-		"nodemon": "^2.0.12"
+		"nodemon": "^2.0.12",
+		"passport": "^0.4.1",
+		"passport-azure-ad": "^4.3.0"
 	}
 }
